--- a/gym-molecule/gym_molecule/envs/molecule_evaluation.ipynb
+++ b/gym-molecule/gym_molecule/envs/molecule_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "nbpresent": {
      "id": "bfe0f3a9-2862-436b-8e30-995054b5cde1"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "nbpresent": {
      "id": "dbec5e74-0c32-40a0-9a0b-625c0c6fd5aa"
@@ -34,7 +34,7 @@
    "source": [
     "## file io\n",
     "training_dataset_path = '~/Github/rl_graph_generation/gym-molecule/gym_molecule/dataset/250k_rndm_zinc_drugs_clean.smi'  # single smiles column\n",
-    "generated_dataset_path = '~/Github/rl_graph_generation/molecule_gen/logppen_generated.smi'  # single smiles column\n",
+    "generated_dataset_path = '~/Github/rl_graph_generation/molecule_gen/qed_generated.smi'  # single smiles column\n",
     "\n",
     "training_df = pd.read_csv(training_dataset_path, header=None, names=['smiles'])\n",
     "training_s = training_df['smiles']\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "nbpresent": {
      "id": "0d11dd2c-003e-4fae-8ada-f7bad147a437"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "nbpresent": {
      "id": "3ed2e868-f24c-4bb8-9cb3-fb1ff1cbe51c"
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# take a sample from the training dataset and the generated dataset\n",
-    "n = 6000\n",
+    "n = 3000\n",
     "assert n <= len(training_s)\n",
     "assert n <= len(generated_s)\n",
     "training_s = training_s.sample(n)\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "nbpresent": {
      "id": "0103f446-0cb9-4174-9151-a0989bbee6e2"
@@ -89,29 +89,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "% unique within generated: 0.25433333333333336\n",
+      "% unique within generated: 0.9916666666666667\n",
       "% unique within training: 1.0\n",
       "% unique compared to training: 1.0\n",
-      "train MW mean: 331.6190978333334\n",
-      "train MW std: 62.20035110082528\n",
-      "train logP max: 6.252840000000005\n",
-      "train logP mean: 2.4384746166666678\n",
-      "train logP std: 1.4244213157711876\n",
-      "train SA mean: 3.054184025815842\n",
-      "train SA std: 0.8379488945060221\n",
-      "train QED max: 0.9483312933817938\n",
-      "train QED mean: 0.7328524858251257\n",
-      "train QED std: 0.13605869150114158\n",
-      "gen MW mean: 139.8868695\n",
-      "gen MW std: 95.56403608033273\n",
-      "gen logP max: 6.826500000000003\n",
-      "gen logP mean: 1.084901415\n",
-      "gen logP std: 1.0779847095201063\n",
-      "gen SA mean: 4.3184387797809345\n",
-      "gen SA std: 1.2071419588575927\n",
-      "gen QED max: 0.7705089215902865\n",
-      "gen QED mean: 0.3851265388867863\n",
-      "gen QED std: 0.0812270721767118\n"
+      "train MW mean: 335.0165366666667\n",
+      "train MW std: 62.19810697765645\n",
+      "train logP max: 5.8576200000000025\n",
+      "train logP mean: 2.5235593933333345\n",
+      "train logP std: 1.428288104741909\n",
+      "train SA mean: 3.023980029975589\n",
+      "train SA std: 0.8305723619968923\n",
+      "train QED max: 0.9473299477751763\n",
+      "train QED mean: 0.7288908122300418\n",
+      "train QED std: 0.1383981845631478\n",
+      "gen MW mean: 358.236142\n",
+      "gen MW std: 146.0426941240352\n",
+      "gen logP max: 8.552699999999996\n",
+      "gen logp second: 7.6395\n",
+      "gen logP mean: 2.5873056800000005\n",
+      "gen logP std: 1.5164885386294462\n",
+      "gen SA mean: 6.176131252449784\n",
+      "gen SA std: 0.8890604985591276\n",
+      "gen QED max: 0.7925452402020967\n",
+      "gen QED second: 0.790167255092099\n",
+      "gen QED mean: 0.29308226308281654\n",
+      "gen QED std: 0.14595997675635394\n"
      ]
     }
    ],
@@ -161,6 +163,8 @@
     "# logP\n",
     "logp_gen_list = [Descriptors.MolLogP(Chem.MolFromSmiles(s)) for s in generated_s]\n",
     "print('gen logP max: {}'.format(np.array(logp_gen_list).max()))\n",
+    "print('gen logp second: {}'.format(np.sort(np.array(logp_gen_list))[::-1][1]))\n",
+    "print('gen logp third: {}'.format(np.sort(np.array(logp_gen_list))[::-1][2]))\n",
     "print('gen logP mean: {}'.format(np.array(logp_gen_list).mean()))\n",
     "print('gen logP std: {}'.format(np.array(logp_gen_list).std()))\n",
     "# SA\n",
@@ -170,6 +174,8 @@
     "# QED\n",
     "qed_gen_list = [Descriptors.qed(Chem.MolFromSmiles(s)) for s in generated_s]\n",
     "print('gen QED max: {}'.format(np.array(qed_gen_list).max()))\n",
+    "print('gen QED second: {}'.format(np.sort(np.array(qed_gen_list))[::-1][1]))\n",
+    "print('gen QED third: {}'.format(np.sort(np.array(qed_gen_list))[::-1][2]))\n",
     "print('gen QED mean: {}'.format(np.array(qed_gen_list).mean()))\n",
     "print('gen QED std: {}'.format(np.array(qed_gen_list).std()))"
    ]
