some new updates

--- a/gym-molecule/gym_molecule/envs/molecule_evaluation.ipynb
+++ b/gym-molecule/gym_molecule/envs/molecule_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {
     "nbpresent": {
      "id": "bfe0f3a9-2862-436b-8e30-995054b5cde1"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {
     "nbpresent": {
      "id": "dbec5e74-0c32-40a0-9a0b-625c0c6fd5aa"
@@ -34,7 +34,7 @@
    "source": [
     "## file io\n",
     "training_dataset_path = '~/Github/rl_graph_generation/gym-molecule/gym_molecule/dataset/250k_rndm_zinc_drugs_clean.smi'  # single smiles column\n",
-    "generated_dataset_path = '~/Github/rl_graph_generation/molecule_gen/qed_generated.smi'  # single smiles column\n",
+    "generated_dataset_path = '~/Github/rl_graph_generation/molecule_gen/logp_target_generated.smi'  # single smiles column\n",
     "\n",
     "training_df = pd.read_csv(training_dataset_path, header=None, names=['smiles'])\n",
     "training_s = training_df['smiles']\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {
     "nbpresent": {
      "id": "0d11dd2c-003e-4fae-8ada-f7bad147a437"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {
     "nbpresent": {
      "id": "3ed2e868-f24c-4bb8-9cb3-fb1ff1cbe51c"
@@ -68,16 +68,17 @@
    "outputs": [],
    "source": [
     "# take a sample from the training dataset and the generated dataset\n",
-    "n = 3000\n",
+    "n = 4000\n",
     "assert n <= len(training_s)\n",
     "assert n <= len(generated_s)\n",
     "training_s = training_s.sample(n)\n",
-    "generated_s = generated_s.sample(n)"
+    "generated_s = generated_s.sample(n)\n",
+    "#print(generated_s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {
     "nbpresent": {
      "id": "0103f446-0cb9-4174-9151-a0989bbee6e2"
@@ -89,31 +90,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "% unique within generated: 0.9916666666666667\n",
+      "% unique within generated: 0.99975\n",
       "% unique within training: 1.0\n",
       "% unique compared to training: 1.0\n",
-      "train MW mean: 335.0165366666667\n",
-      "train MW std: 62.19810697765645\n",
-      "train logP max: 5.8576200000000025\n",
-      "train logP mean: 2.5235593933333345\n",
-      "train logP std: 1.428288104741909\n",
-      "train SA mean: 3.023980029975589\n",
-      "train SA std: 0.8305723619968923\n",
-      "train QED max: 0.9473299477751763\n",
-      "train QED mean: 0.7288908122300418\n",
-      "train QED std: 0.1383981845631478\n",
-      "gen MW mean: 358.236142\n",
-      "gen MW std: 146.0426941240352\n",
-      "gen logP max: 8.552699999999996\n",
-      "gen logp second: 7.6395\n",
-      "gen logP mean: 2.5873056800000005\n",
-      "gen logP std: 1.5164885386294462\n",
-      "gen SA mean: 6.176131252449784\n",
-      "gen SA std: 0.8890604985591276\n",
-      "gen QED max: 0.7925452402020967\n",
-      "gen QED second: 0.790167255092099\n",
-      "gen QED mean: 0.29308226308281654\n",
-      "gen QED std: 0.14595997675635394\n"
+      "train MW mean: 332.1341365\n",
+      "train MW std: 62.515151074514534\n",
+      "train logP max: 6.657500000000005\n",
+      "train logP mean: 2.420398835000001\n",
+      "train logP std: 1.4320170780836712\n",
+      "train SA mean: 3.041295008982118\n",
+      "train SA std: 0.8218410599010127\n",
+      "train QED max: 0.9435035596436372\n",
+      "train QED mean: 0.7293169877172176\n",
+      "train QED std: 0.1390787655227387\n",
+      "mw_target success rate:  0.08875\n",
+      "gen MW mean: 262.14018075\n",
+      "gen MW std: 59.120449638700165\n",
+      "logp_target success rate:  0.0275\n",
+      "gen logP max: 7.008300000000008\n",
+      "gen logp second: 6.842400000000007\n",
+      "gen logp third: 6.665500000000005\n",
+      "gen logP mean: 2.754355565000002\n",
+      "gen logP std: 1.371083326980689\n",
+      "gen SA mean: 5.344026426936669\n",
+      "gen SA std: 0.7967368927980425\n",
+      "gen QED max: 0.8555818679861786\n",
+      "gen QED second: 0.8505543077947814\n",
+      "gen QED third: 0.8365898704709872\n",
+      "gen QED mean: 0.4574095581731081\n",
+      "gen QED std: 0.16238032871243255\n"
      ]
     }
    ],
@@ -156,11 +161,17 @@
     "print('train QED std: {}'.format(np.array(qed_train_list).std()))\n",
     "\n",
     "## generated dataset\n",
-    "# MW\n",
+    "#MW\n",
+    "mw_in_range=[s for s in generated_s if Descriptors.MolWt(Chem.MolFromSmiles(s)) >= 150 and Descriptors.MolWt(Chem.MolFromSmiles(s)) <=200]\n",
+    "mw_success_rate = len(mw_in_range)/4000\n",
+    "print('mw_target success rate: ',mw_success_rate )\n",
     "mw_gen_list = [Descriptors.MolWt(Chem.MolFromSmiles(s)) for s in generated_s]\n",
     "print('gen MW mean: {}'.format(np.array(mw_gen_list).mean()))\n",
     "print('gen MW std: {}'.format(np.array(mw_gen_list).std()))\n",
     "# logP\n",
+    "logp_in_range=[s for s in generated_s if Descriptors.MolLogP(Chem.MolFromSmiles(s)) >= 5 and Descriptors.MolLogP(Chem.MolFromSmiles(s)) <=5.5]\n",
+    "logp_success_rate = len(logp_in_range)/4000\n",
+    "print('logp_target success rate: ',logp_success_rate )\n",
     "logp_gen_list = [Descriptors.MolLogP(Chem.MolFromSmiles(s)) for s in generated_s]\n",
     "print('gen logP max: {}'.format(np.array(logp_gen_list).max()))\n",
     "print('gen logp second: {}'.format(np.sort(np.array(logp_gen_list))[::-1][1]))\n",
