--- a/gym-molecule/gym_molecule/envs/molecule_evaluation.ipynb
+++ b/gym-molecule/gym_molecule/envs/molecule_evaluation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "nbpresent": {
      "id": "dbec5e74-0c32-40a0-9a0b-625c0c6fd5aa"
@@ -34,7 +34,7 @@
    "source": [
     "## file io\n",
     "training_dataset_path = '~/Github/rl_graph_generation/gym-molecule/gym_molecule/dataset/250k_rndm_zinc_drugs_clean.smi'  # single smiles column\n",
-    "generated_dataset_path = '~/Github/rl_graph_generation/molecule_gen/qed_generated.smi'  #'~/Desktop/experiment results/current_zinc_qed_results/qed_generated.smi'# single smiles column\n",
+    "generated_dataset_path = '~/qed_generated.smi' #'~/Github/rl_graph_generation/molecule_gen/qed_generated.smi'  #'~/Desktop/experiment results/current_zinc_qed_results/qed_generated.smi'# single smiles column\n",
     "\n",
     "training_df = pd.read_csv(training_dataset_path, header=None, names=['smiles'])\n",
     "training_s = training_df['smiles']\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "nbpresent": {
      "id": "3ed2e868-f24c-4bb8-9cb3-fb1ff1cbe51c"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "nbpresent": {
      "id": "0103f446-0cb9-4174-9151-a0989bbee6e2"
@@ -90,14 +90,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "% unique within generated: 0.9999233716475096\n",
+      "% unique within generated: 0.999812734082397\n",
       "% unique within training: 1.0\n",
       "% unique compared to training: 1.0\n",
-      "gen QED max: 0.919263737268174\n",
-      "gen QED second: 0.9102022736058223\n",
-      "gen QED third: 0.8941821822593814\n",
-      "gen QED mean: 0.6148673264822109\n",
-      "gen QED std: 0.1373018754473203\n"
+      "gen QED max: 0.8800143928653378\n",
+      "gen QED second: 0.8668883265529033\n",
+      "gen QED third: 0.866014502942196\n",
+      "gen QED mean: 0.6355292709331418\n",
+      "gen QED std: 0.13271767113073613\n"
      ]
     }
    ],
