change encoder to SMILES implementation

--- a/gym-molecule/gym_molecule/envs/molecule_evaluation.ipynb
+++ b/gym-molecule/gym_molecule/envs/molecule_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "nbpresent": {
      "id": "bfe0f3a9-2862-436b-8e30-995054b5cde1"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {
     "nbpresent": {
      "id": "dbec5e74-0c32-40a0-9a0b-625c0c6fd5aa"
@@ -34,7 +34,7 @@
    "source": [
     "## file io\n",
     "training_dataset_path = '~/Github/rl_graph_generation/gym-molecule/gym_molecule/dataset/250k_rndm_zinc_drugs_clean.smi'  # single smiles column\n",
-    "generated_dataset_path = '~/qed_generated.smi' #'~/Github/rl_graph_generation/molecule_gen/qed_generated.smi'  #'~/Desktop/experiment results/current_zinc_qed_results/qed_generated.smi'# single smiles column\n",
+    "generated_dataset_path = '~/Github/rl_graph_generation_origin/molecule_gen/logp_generated.smi'  #'~/Desktop/experiment results/current_zinc_qed_results/qed_generated.smi'# single smiles column\n",
     "\n",
     "training_df = pd.read_csv(training_dataset_path, header=None, names=['smiles'])\n",
     "training_s = training_df['smiles']\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 105,
    "metadata": {
     "nbpresent": {
      "id": "3ed2e868-f24c-4bb8-9cb3-fb1ff1cbe51c"
@@ -71,14 +71,14 @@
     "n = 5000\n",
     "assert n <= len(training_s)\n",
     "assert n <= len(generated_s)\n",
-    "training_s = training_s#.sample(n)\n",
-    "generated_s = generated_s#.sample(n)\n",
+    "training_s = training_s.sample(n)\n",
+    "generated_s = generated_s.sample(n)\n",
     "#print(generated_s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 107,
    "metadata": {
     "nbpresent": {
      "id": "0103f446-0cb9-4174-9151-a0989bbee6e2"
@@ -90,14 +90,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "% unique within generated: 0.999812734082397\n",
+      "% unique within generated: 0.9976\n",
       "% unique within training: 1.0\n",
       "% unique compared to training: 1.0\n",
-      "gen QED max: 0.8800143928653378\n",
-      "gen QED second: 0.8668883265529033\n",
-      "gen QED third: 0.866014502942196\n",
-      "gen QED mean: 0.6355292709331418\n",
-      "gen QED std: 0.13271767113073613\n"
+      "gen QED max: 0.941636983655065\n",
+      "gen QED second: 0.9315928861888577\n",
+      "gen QED third: 0.9134437116708106\n",
+      "gen QED mean: 0.5781901265172177\n",
+      "gen QED std: 0.16199629489236902\n"
      ]
     }
    ],
@@ -180,6 +180,12 @@
     "# print('gen SA mean: {}'.format(np.array(sa_gen_list).mean()))\n",
     "# print('gen SA std: {}'.format(np.array(sa_gen_list).std()))\n",
     "#QED\n",
+    "#print(generated_s)\n",
+    "# for i in range(len(generated_s)):\n",
+    "#     if Chem.MolFromSmiles(generated_s[i]) is None:\n",
+    "#         print(i)\n",
+    "#         print(generated_s[i])\n",
+    "    #Descriptors.qed(Chem.MolFromSmiles(generated_s[i]))\n",
     "qed_gen_list = [Descriptors.qed(Chem.MolFromSmiles(s)) for s in generated_s]\n",
     "print('gen QED max: {}'.format(np.array(qed_gen_list).max()))\n",
     "print('gen QED second: {}'.format(np.sort(np.array(qed_gen_list))[::-1][1]))\n",
